[package]
name = "heim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh_config = { path = "../ssh_config" }
clap = { version = "4.4.11", features = ["derive"] }
dialoguer = {version = "0.11.0", features = ["fuzzy-select"]}
dirs = "5.0.1"
